--- a/angular-app/styles/main.css
+++ b/angular-app/styles/main.css
@@ -4543,7 +4543,8 @@ fieldset[disabled] .btn-danger.active {
 .top-header .dropdown-menu.panel .panel-heading {
   background: #ffffff; }
 
-.top-header .dropdown-menu.panel .panel-heading, .top-header .dropdown-menu.panel .panel-footer {
+.top-header .dropdown-menu.panel .panel-heading,
+.top-header .dropdown-menu.panel .panel-footer {
   padding: 10px 15px; }
 
 .top-header .dropdown-menu.panel .list-group-item {
@@ -4578,26 +4579,32 @@ fieldset[disabled] .btn-danger.active {
   margin-right: 20px;
   margin-top: 15px; }
 
-.top-header .top-nav .nav-left > li, .top-header .top-nav .nav-right > li {
+.top-header .top-nav .nav-left > li,
+.top-header .top-nav .nav-right > li {
   float: left; }
 
-.top-header .top-nav .nav-left > li.nav-profile > a, .top-header .top-nav .nav-right > li.nav-profile > a {
+.top-header .top-nav .nav-left > li.nav-profile > a,
+.top-header .top-nav .nav-right > li.nav-profile > a {
   padding: 10px 15px; }
 
-.top-header .top-nav .nav-left > li.nav-profile .hidden-xs, .top-header .top-nav .nav-right > li.nav-profile .hidden-xs {
+.top-header .top-nav .nav-left > li.nav-profile .hidden-xs,
+.top-header .top-nav .nav-right > li.nav-profile .hidden-xs {
   padding-right: 8px; }
 
-.top-header .top-nav .nav-left > li.nav-profile i, .top-header .top-nav .nav-right > li.nav-profile i {
+.top-header .top-nav .nav-left > li.nav-profile i,
+.top-header .top-nav .nav-right > li.nav-profile i {
   width: 18px;
   font-size: 16px;
   margin-right: 5px; }
 
-.top-header .top-nav .nav-left > li > .toggle-min, .top-header .top-nav .nav-right > li > .toggle-min {
+.top-header .top-nav .nav-left > li > .toggle-min,
+.top-header .top-nav .nav-right > li > .toggle-min {
   display: none;
   margin-left: 20px; }
 
 @media (min-width: 768px) {
-  .top-header .top-nav .nav-left > li > .toggle-min, .top-header .top-nav .nav-right > li > .toggle-min {
+  .top-header .top-nav .nav-left > li > .toggle-min,
+  .top-header .top-nav .nav-right > li > .toggle-min {
     display: block; } }
 @media (max-width: 350px) {
   .top-header .top-nav .nav-right {
@@ -4606,33 +4613,48 @@ fieldset[disabled] .btn-danger.active {
   .top-header .menu-button {
     margin-left: 10px; }
 
-  .top-header .top-nav .nav-left > li.nav-profile > a, .top-header .top-nav .nav-right > li.nav-profile > a {
+  .top-header .top-nav .nav-left > li.nav-profile > a,
+  .top-header .top-nav .nav-right > li.nav-profile > a {
     padding: 10px 5px; } }
 @media (max-width: 480px) {
   .top-header .top-nav .nav-right-button {
     display: none; } }
-.top-header .top-nav .nav-left > li a:hover, .top-header .top-nav .nav-left > li a:focus, .top-header .top-nav .nav-right > li a:hover, .top-header .top-nav .nav-right > li a:focus {
+.top-header .top-nav .nav-left > li a:hover,
+.top-header .top-nav .nav-left > li a:focus,
+.top-header .top-nav .nav-right > li a:hover,
+.top-header .top-nav .nav-right > li a:focus {
   text-decoration: none; }
 
-.top-header .top-nav .nav-left > li > .btn-group > a, .top-header .top-nav .nav-left > li > a, .top-header .top-nav .nav-right > li > .btn-group > a, .top-header .top-nav .nav-right > li > a {
+.top-header .top-nav .nav-left > li > .btn-group > a,
+.top-header .top-nav .nav-left > li > a,
+.top-header .top-nav .nav-right > li > .btn-group > a,
+.top-header .top-nav .nav-right > li > a {
   position: relative;
   display: block;
   height: 50px;
   padding: 14px 10px; }
 
 @media (min-width: 768px) {
-  .top-header .top-nav .nav-left > li > .btn-group > a, .top-header .top-nav .nav-left > li > a, .top-header .top-nav .nav-right > li > .btn-group > a, .top-header .top-nav .nav-right > li > a {
+  .top-header .top-nav .nav-left > li > .btn-group > a,
+  .top-header .top-nav .nav-left > li > a,
+  .top-header .top-nav .nav-right > li > .btn-group > a,
+  .top-header .top-nav .nav-right > li > a {
     padding: 14px 15px; } }
-.top-header .top-nav .nav-left > li > .btn-group > a .badge, .top-header .top-nav .nav-left > li > a .badge, .top-header .top-nav .nav-right > li > .btn-group > a .badge, .top-header .top-nav .nav-right > li > a .badge {
+.top-header .top-nav .nav-left > li > .btn-group > a .badge,
+.top-header .top-nav .nav-left > li > a .badge,
+.top-header .top-nav .nav-right > li > .btn-group > a .badge,
+.top-header .top-nav .nav-right > li > a .badge {
   position: absolute;
   top: 6px;
   right: 3px; }
 
-.top-header .top-nav .nav-left > li ul.dropdown-menu a:hover, .top-header .top-nav .nav-right > li ul.dropdown-menu a:hover {
+.top-header .top-nav .nav-left > li ul.dropdown-menu a:hover,
+.top-header .top-nav .nav-right > li ul.dropdown-menu a:hover {
   background-color: #db5031;
   color: #fff; }
 
-.top-header .top-nav .nav-left > li ul.dropdown-menu .glyphicon, .top-header .top-nav .nav-right > li ul.dropdown-menu .glyphicon {
+.top-header .top-nav .nav-left > li ul.dropdown-menu .glyphicon,
+.top-header .top-nav .nav-right > li ul.dropdown-menu .glyphicon {
   margin-right: 10px; }
 
 .top-header .top-nav .nav-left {
@@ -4669,6 +4691,9 @@ fieldset[disabled] .btn-danger.active {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px; }
+
+.top-header .top-nav .nav-left > li > select {
+  margin: 10px; }
 
 .top-header .langs .active-flag .flag {
   margin-top: -5px; }
