--- a/angular-app/styles/main.scss
+++ b/angular-app/styles/main.scss
@@ -4612,7 +4612,8 @@ background-color:$blue;
 .top-header .dropdown-menu.panel .panel-heading{
   background: #ffffff;
 }
-.top-header .dropdown-menu.panel .panel-heading, .top-header .dropdown-menu.panel .panel-footer {
+.top-header .dropdown-menu.panel .panel-heading,
+.top-header .dropdown-menu.panel .panel-footer {
   padding: 10px 15px;
 }
 
@@ -4651,66 +4652,79 @@ background-color:$blue;
   margin-top: 15px;
 }
 
-.top-header .top-nav .nav-right-button{
+.top-header .top-nav .nav-right-button {
   font-size: 18px;
   line-height: 22px;
   margin-right: 20px;
   margin-top: 15px;
 }
 
-.top-header .top-nav .nav-left>li, .top-header .top-nav .nav-right>li {
+.top-header .top-nav .nav-left>li,
+.top-header .top-nav .nav-right>li {
   float: left;
 }
 
-.top-header .top-nav .nav-left>li.nav-profile>a, .top-header .top-nav .nav-right>li.nav-profile>a {
+.top-header .top-nav .nav-left>li.nav-profile>a,
+.top-header .top-nav .nav-right>li.nav-profile>a {
   padding: 10px 15px;
 }
 
-.top-header .top-nav .nav-left>li.nav-profile .hidden-xs, .top-header .top-nav .nav-right>li.nav-profile .hidden-xs {
+.top-header .top-nav .nav-left>li.nav-profile .hidden-xs,
+.top-header .top-nav .nav-right>li.nav-profile .hidden-xs {
   padding-right: 8px;
 }
 
-.top-header .top-nav .nav-left>li.nav-profile i, .top-header .top-nav .nav-right>li.nav-profile i {
+.top-header .top-nav .nav-left>li.nav-profile i,
+.top-header .top-nav .nav-right>li.nav-profile i {
   width: 18px;
   font-size: 16px;
   margin-right: 5px;
 }
 
-.top-header .top-nav .nav-left>li>.toggle-min, .top-header .top-nav .nav-right>li>.toggle-min {
+.top-header .top-nav .nav-left > li > .toggle-min,
+.top-header .top-nav .nav-right > li > .toggle-min {
   display: none;
   margin-left:20px;
 }
 
 @media (min-width: 768px) {
-  .top-header .top-nav .nav-left>li>.toggle-min, .top-header .top-nav .nav-right>li>.toggle-min {
+  .top-header .top-nav .nav-left>li>.toggle-min,
+  .top-header .top-nav .nav-right>li>.toggle-min {
     display: block;
   }
 }
 
 @media (max-width:350px){
-  .top-header .top-nav .nav-right{
+  .top-header .top-nav .nav-right {
     margin-left:0;
   }
-  .top-header .menu-button{
+  .top-header .menu-button {
     margin-left:10px;
   }
-  .top-header .top-nav .nav-left > li.nav-profile > a, .top-header .top-nav .nav-right > li.nav-profile > a {
+  .top-header .top-nav .nav-left > li.nav-profile > a,
+  .top-header .top-nav .nav-right > li.nav-profile > a {
     padding: 10px 5px;
   }
 
 }
 
 @media (max-width:480px){
-  .top-header .top-nav .nav-right-button{
+  .top-header .top-nav .nav-right-button {
     display:none;
   }
 }
 
-.top-header .top-nav .nav-left>li a:hover, .top-header .top-nav .nav-left>li a:focus, .top-header .top-nav .nav-right>li a:hover, .top-header .top-nav .nav-right>li a:focus {
+.top-header .top-nav .nav-left>li a:hover,
+.top-header .top-nav .nav-left>li a:focus,
+.top-header .top-nav .nav-right>li a:hover,
+.top-header .top-nav .nav-right>li a:focus {
   text-decoration: none;
 }
 
-.top-header .top-nav .nav-left>li>.btn-group>a, .top-header .top-nav .nav-left>li>a, .top-header .top-nav .nav-right>li>.btn-group>a, .top-header .top-nav .nav-right>li>a {
+.top-header .top-nav .nav-left>li>.btn-group>a,
+.top-header .top-nav .nav-left>li>a,
+.top-header .top-nav .nav-right>li>.btn-group>a,
+.top-header .top-nav .nav-right>li>a {
   position: relative;
   display: block;
   height: 50px;
@@ -4718,23 +4732,31 @@ background-color:$blue;
 }
 
 @media (min-width: 768px) {
-  .top-header .top-nav .nav-left>li>.btn-group>a, .top-header .top-nav .nav-left>li>a, .top-header .top-nav .nav-right>li>.btn-group>a, .top-header .top-nav .nav-right>li>a {
+  .top-header .top-nav .nav-left>li>.btn-group>a,
+  .top-header .top-nav .nav-left>li>a,
+  .top-header .top-nav .nav-right>li>.btn-group>a,
+  .top-header .top-nav .nav-right>li>a {
     padding: 14px 15px;
   }
 }
 
-.top-header .top-nav .nav-left>li>.btn-group>a .badge, .top-header .top-nav .nav-left>li>a .badge, .top-header .top-nav .nav-right>li>.btn-group>a .badge, .top-header .top-nav .nav-right>li>a .badge {
+.top-header .top-nav .nav-left>li>.btn-group>a .badge,
+.top-header .top-nav .nav-left>li>a .badge,
+.top-header .top-nav .nav-right>li>.btn-group>a .badge,
+.top-header .top-nav .nav-right>li>a .badge {
   position: absolute;
   top: 6px;
   right: 3px;
 }
 
-.top-header .top-nav .nav-left>li ul.dropdown-menu a:hover, .top-header .top-nav .nav-right>li ul.dropdown-menu a:hover {
+.top-header .top-nav .nav-left>li ul.dropdown-menu a:hover,
+.top-header .top-nav .nav-right>li ul.dropdown-menu a:hover {
   background-color: $orange;
   color: #fff;
 }
 
-.top-header .top-nav .nav-left>li ul.dropdown-menu .glyphicon, .top-header .top-nav .nav-right>li ul.dropdown-menu .glyphicon {
+.top-header .top-nav .nav-left>li ul.dropdown-menu .glyphicon,
+.top-header .top-nav .nav-right>li ul.dropdown-menu .glyphicon {
   margin-right: 10px;
 }
 
@@ -4781,7 +4803,10 @@ background-color:$blue;
 }
 .top-header .top-nav .nav-left>li>a img{
   @include border-radius(5px);
+}
 
+.top-header .top-nav .nav-left > li > select {
+    margin: 10px;
 }
 
 .top-header .langs .active-flag .flag {
