--- a/public/views/dashboard-partials/teams.html
+++ b/public/views/dashboard-partials/teams.html
@@ -7,16 +7,21 @@
 
                     <!-- List of teams -->
 					<div class="col-sm-12">
-						<div ng-hide="data.teams.length > 0">
-                            You don't have any teams yet! Create one below to get started
+						<div ng-hide="data.team.list.length == 0">
+                            You don't have any teams yet! Create one below to get started.
                         </div>
 
 						<a
-                            ng-repeat="team in data.teams"
-                            ng-click="data.selected_team = team;forwardsStep();"
+                            ng-repeat="team in data.team.list"
+                            ng-click="data.team.selected = team;forwardsStep();"
                             href="javascript:;"
                             class="btn btn-primary btn-metro">
-							<object style="pointer-events:none;" type="image/svg+xml" data="/images/sports/{{team.sport_id}}.svg"/>
+
+							<object
+                                style="pointer-events:none;"
+                                type="image/svg+xml"
+                                data="/images/sports/{{team.sport_id}}.svg" />
+
 							<span>{{team.name}}</span>
 						</a>
 					</div>
@@ -25,19 +30,22 @@
 		</div>
 	</div>
 </section>
+
 <section>
 	<div class="row">
 		<div class="col-sm-6">
 			<div class="panel panel-default">
+
+                <!-- Add team form -->
 				<div class="panel-body">
-					<h2>
-						Add team
-					</h2>
+					<h2>Add a Team</h2>
+
 					<div class="col-sm-2">
 						<a href="javascript:;" class="btn btn-primary btn-metro btn-metro-sm">
 							<object type="image/svg+xml" data="/images/sports/{{data.selected_sport.id}}.svg"/>
 						</a>
 					</div>
+
 					<div class="col-sm-10">
 						<form ng-submit="submitNewTeamForm()" ng-controller="SportsController">
 							<div class="form-group">
