--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -11,19 +11,25 @@
 <div class="page page-dashboard" data-ng-controller="FMSFormController">
 	<div ng-controller="StepController">
 		<ol class="breadcrumb-alt">
-			<li><a class="active" ng-click="current_dashboard_page=0">Teams</a></li>
-			<li ng-show="current_dashboard_page > 0"><a class="active" ng-click="current_dashboard_page=1">Athletes</a></li>
-			<li ng-show="current_dashboard_page > 1"><a class="active" ng-click="current_dashboard_page=2">Profiles</a></li>
+			<li>
+                <a class="active" ng-click="current_dashboard_page=0">Teams</a>
+            </li>
+			<li ng-show="current_dashboard_page > 0">
+                <a class="active" ng-click="current_dashboard_page=1">Athletes</a>
+            </li>
+			<li ng-show="current_dashboard_page > 1">
+                <a class="active" ng-click="current_dashboard_page=2">Profiles</a>
+            </li>
 		</ol>
 		<div ng-switch="current_dashboard_page">
 			<div ng-switch-when="0">
-				<div ng-include src="'views/dashboardpartial/selectteam.html?' + (dev.isLocal ? dev.timestamp : '')"></div>
+				<div ng-include src="'views/dashboard-partials/teams.html?' + (dev.isLocal ? dev.timestamp : '')"></div>
 			</div>
 			<div ng-switch-when="1">
-				<div ng-include src="'views/dashboardpartial/viewteammembers.html?' + (dev.isLocal ? dev.timestamp : '')"></div>
+				<div ng-include src="'views/dashboard-partials/members.html?' + (dev.isLocal ? dev.timestamp : '')"></div>
 			</div>
 			<div ng-switch-when="2">
-				<div ng-include src="'views/dashboardpartial/athleteprofile.html?' + (dev.isLocal ? dev.timestamp : '')"></div>
+				<div ng-include src="'views/dashboard-partials/athleteprofile.html?' + (dev.isLocal ? dev.timestamp : '')"></div>
 			</div>
 		</div>
 	</div>
