--- a/angular-app/styles/main.scss
+++ b/angular-app/styles/main.scss
@@ -4806,7 +4806,17 @@ background-color:$blue;
 }
 
 .top-header .top-nav .nav-left > li > select {
-    margin: 10px;
+    margin: 8px;
+    padding: 5px;
+    text-align: center;
+    color: #000;
+    background-color: #ddd;
+    border: none;
+    cursor: pointer;
+    @include border-radius(3px);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 .top-header .langs .active-flag .flag {
@@ -7690,47 +7700,49 @@ button.toast-close-button {
 18 - Ajax loading
 *************************************/
 
+// .page-loading-overlay {
+//     zoom: 1;
+//     filter: alpha(opacity=0);
+//     -webkit-opacity: 0;
+//     -moz-opacity: 0;
+//     opacity: 1;
+//   /* visibility: hidden; */
+// }
 .page-loading-overlay {
-  zoom: 1;
-  filter: alpha(opacity=0);
-  -webkit-opacity: 0;
-  -moz-opacity: 0;
-  opacity: 1;
-  /* visibility: hidden; */
-}
-.page-loading-overlay {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  overflow: hidden;
-  background: #fff;
-  z-index: 1000;
-  -webkit-perspective: 10000;
-  -moz-perspective: 10000;
-  perspective: 10000;
-  -webkit-perspective: 10000px;
-  -moz-perspective: 10000px;
-  perspective: 10000px;
-  zoom: 1;
-  filter: alpha(opacity=100);
-  -webkit-opacity: 1;
-  -moz-opacity: 1;
-  opacity: 1;
-  -webkit-transition: all 1s ease-in-out;
-  -moz-transition: all 1s ease-in-out;
-  -o-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+    background: #fff;
+    z-index: 1000;
+    -webkit-perspective: 10000;
+    -moz-perspective: 10000;
+    perspective: 10000;
+    -webkit-perspective: 10000px;
+    -moz-perspective: 10000px;
+    perspective: 10000px;
+    zoom: 1;
+    filter: alpha(opacity=100);
+    -webkit-opacity: 1;
+    -moz-opacity: 1;
+    opacity: 1;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
 }
 
-.page-loading-overlay.loaded,.loader.loaded,.load_circle_wrapper.loaded {
-  zoom: 1;
-  filter: alpha(opacity=0);
-  -webkit-opacity: 0;
-  -moz-opacity: 0;
-  opacity: 0;
-  visibility: hidden;
+.page-loading-overlay.loaded,
+.loader.loaded,
+.load_circle_wrapper.loaded {
+    zoom: 1;
+    filter: alpha(opacity=0);
+    -webkit-opacity: 0;
+    -moz-opacity: 0;
+    opacity: 0;
+    visibility: hidden;
 }
 
 
@@ -7744,18 +7756,18 @@ button.toast-close-button {
 */
 
 .load_circle_wrapper{
-  position:absolute;
-  width:100%;
-  text-align:center;
-  top:40%;
-  z-index: 1002;
+    position:absolute;
+    width:100%;
+    text-align:center;
+    top:40%;
+    z-index: 1002;
 }
 
 /**********************
 6 - Loading animations
 ***********************/
 
-.loading_spinner{
+.loading_spinner {
   width:100%;
   text-align:center;
   margin-top:60px;
