--- a/public/views/dashboard-partials/members.html
+++ b/public/views/dashboard-partials/members.html
@@ -7,7 +7,7 @@
 						<h2>Team members</h2>
 
 						<div class="col-sm-12">
-							<div ng-hide="data.athlete.list.length == 0">
+							<div ng-hide="data.athlete.list.length < 1">
                                 This team does not have any athletes yet! Add one below to get started.
                             </div>
 
@@ -15,8 +15,8 @@
 							<a
                                 href="javascript:;"
                                 class="btn btn-primary btn-metro"
-                                ng-repeat="athlete in data.athletes"
-                                ng-click="data.selected_athlete = athlete;forwardsStep();">
+                                ng-repeat="athlete in data.athlete.list"
+                                ng-click="data.athlete.selected = athlete;forwardsStep();">
 
 								<span>{{athlete.first_name}}</span>
 							</a>
@@ -53,7 +53,7 @@
 									<input
                                         type="text"
                                         class="form-control"
-                                        ng-model="data.new_athlete_form_data.first_name"
+                                        ng-model="data.athlete.new.first_name"
                                         placeholder="First Name"
                                         required>
 							</div>
@@ -63,7 +63,7 @@
 									<input
                                         type="text"
                                         class="form-control"
-                                        ng-model="data.new_athlete_form_data.last_name"
+                                        ng-model="data.athlete.new.last_name"
                                         placeholder="Last Name"
                                         required>
 							</div>
@@ -77,7 +77,7 @@
                                     <div class="col-xs-5">
                                         <input
                                             class="form-control"
-                                            ng-model="data.new_athlete_form_data.height_cm"
+                                            ng-model="data.athlete.new.feet"
                                             placeholder="Feet"
                                             type="number"
                                             min="1" max="10"
@@ -86,7 +86,7 @@
                                     <div class="col-xs-5">
                                         <input
                                             class="form-control"
-                                            ng-model="data.new_athlete_form_data.height_cm"
+                                            ng-model="data.athlete.new.inches"
                                             placeholder="Inches"
                                             type="number"
                                             min="1" max="11"
@@ -99,21 +99,22 @@
 							<div class="form-group">
 								<input
                                     class="form-control"
-                                    ng-model="data.new_athlete_form_data.weight_kg"
+                                    ng-model="data.athlete.new.weight_lbs"
                                     placeholder="Weight (lbs)"
                                     type="number"
                                     min="50" max="500"
                                     required>
 							</div>
 
-                            <!-- Sport -->
+                            <!-- Age -->
 							<div class="form-group">
-								<input type="text" class="form-control" ng-model="data.new_athlete_form_data.primary_sport" placeholder="Enter new athlete's primary sport">
-							</div>
-
-                            <!-- Hand/leg dominance -->
-							<div class="form-group">
-								<input type="text" class="form-control" ng-model="data.new_athlete_form_data.hand_leg_dominance" placeholder="Enter new athlete's Hand/Leg dominance">
+								<input
+                                    class="form-control"
+                                    ng-model="data.athlete.new.age"
+                                    placeholder="Age"
+                                    type="number"
+                                    min="1" max="100"
+                                    required>
 							</div>
 
 							<button type="submit" class="btn btn-info pull-right">Submit</button>
