Removed data tab on movement screens + minor additions to header

--- a/angular-app/styles/main.css
+++ b/angular-app/styles/main.css
@@ -4693,8 +4693,10 @@ fieldset[disabled] .btn-danger.active {
   border-radius: 5px; }
 
 .top-header .top-nav .nav-left > li > select {
-  margin: 8px;
+  margin: 5px 8px;
   padding: 5px;
+  height: 40px;
+  font-size: 0.9em;
   text-align: center;
   color: #000;
   background-color: #ddd;
@@ -4708,6 +4710,39 @@ fieldset[disabled] .btn-danger.active {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none; }
+
+.top-header .top-nav .nav-left > li > select:hover {
+  background-color: #ccc; }
+
+.top-header .top-nav .nav-left > li.athlete-dropdown > select {
+  margin-right: 0;
+  -webkit-border-top-right-radius: 0;
+  -moz-border-top-right-radius: 0;
+  border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+  -moz-border-bottom-right-radius: 0;
+  border-bottom-right-radius: 0; }
+
+.top-header .top-nav .nav-left > li.athlete-dropdown > a {
+  display: inline-block;
+  margin: 5px 8px 5px -5px;
+  padding: 0 20px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 0.9em;
+  color: #fff;
+  background-color: #777;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-top-left-radius: 0;
+  border-top-left-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -moz-border-bottom-left-radius: 0;
+  border-bottom-left-radius: 0; }
 
 .top-header .langs .active-flag .flag {
   margin-top: -5px; }
