--- a/public/views/dashboard-partials/profile.html
+++ b/public/views/dashboard-partials/profile.html
@@ -7,8 +7,10 @@
 			<div class="panel-body">
 
 				<div class="text-left col-sm-4">
-					<h3>Player Information</h3>
-					{{data.athlete.selected.first_name}} {{data.athlete.selected.last_name}}
+					<!-- <h3>Player Information</h3> -->
+					<h3>
+					    {{data.athlete.selected.first_name}} {{data.athlete.selected.last_name}}
+					</h3>
 				</div>
 
 				<div class="panel-body col-sm-8 ng-scope">
@@ -109,12 +111,12 @@
 
 			<div class="panel-body">
 
-				<div class="text-left col-sm-6">
+				<div class="text-left">
 					<h3>Medical Information</h3>
-                    
+
 				</div>
 
-				<div class="panel-body col-sm-8 ng-scope">
+				<div class="panel-body ng-scope">
                     <textarea class="form-control"></textarea>
 				</div>
 			</div>
