--- a/public/views/dashboard-partials/teams.html
+++ b/public/views/dashboard-partials/teams.html
@@ -7,7 +7,7 @@
 
                     <!-- List of teams -->
 					<div class="col-sm-12">
-						<div ng-hide="data.team.list.length == 0">
+						<div ng-hide="data.team.list.length > 0">
                             You don't have any teams yet! Create one below to get started.
                         </div>
 
