--- a/public/views/outer.html
+++ b/public/views/outer.html
@@ -24,9 +24,9 @@
 			<li ng-click="data.current_movement_page.latest_page = 1" ng-class="{'active':data.current_movement_page.latest_page == 1}">
                 <a>ANALYSIS</a>
             </li>
-			<li ng-click="data.current_movement_page.latest_page = 2" ng-class="{'active':data.current_movement_page.latest_page == 2}">
+			<!-- <li ng-click="data.current_movement_page.latest_page = 2" ng-class="{'active':data.current_movement_page.latest_page == 2}">
                 <a>DATA</a>
-            </li>
+            </li> -->
 			<li ng-click="data.current_movement_page.latest_page = 3" ng-class="{'active':data.current_movement_page.latest_page == 3}">
                 <a>SUMMARY</a>
             </li>
