--- a/angular-app/styles/main.scss
+++ b/angular-app/styles/main.scss
@@ -4793,21 +4793,22 @@ background-color:$blue;
   .top-header .top-nav .nav-right>li>a {
     width: 35px;
     text-align: center;
-
   }
 }
 
-.top-header .top-nav .nav-left>li>a {
-  color:$light-gray;
-  font-size:25px;
+.top-header .top-nav .nav-left > li > a {
+    color:$light-gray;
+    font-size:25px;
 }
-.top-header .top-nav .nav-left>li>a img{
-  @include border-radius(5px);
+.top-header .top-nav .nav-left > li > a img {
+    @include border-radius(5px);
 }
 
 .top-header .top-nav .nav-left > li > select {
-    margin: 8px;
+    margin: 5px 8px;
     padding: 5px;
+    height: 40px;
+    font-size: 0.9em;
     text-align: center;
     color: #000;
     background-color: #ddd;
@@ -4817,6 +4818,36 @@ background-color:$blue;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+}
+.top-header .top-nav .nav-left > li > select:hover {
+    background-color: #ccc;
+}
+
+.top-header .top-nav .nav-left > li.athlete-dropdown > select {
+    margin-right: 0;
+    -webkit-border-top-right-radius: 0;
+    -moz-border-top-right-radius: 0;
+    border-top-right-radius: 0;
+    -webkit-border-bottom-right-radius: 0;
+    -moz-border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.top-header .top-nav .nav-left > li.athlete-dropdown > a {
+    display: inline-block;
+    margin: 5px 8px 5px -5px;
+    padding: 0 20px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 0.9em;
+    color: #fff;
+    background-color: #777;
+    @include border-radius(3px);
+    -webkit-border-top-left-radius: 0;
+    -moz-border-top-left-radius: 0;
+    border-top-left-radius: 0;
+    -webkit-border-bottom-left-radius: 0;
+    -moz-border-bottom-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 .top-header .langs .active-flag .flag {
