--- a/public/views/dashboard-partials/members.html
+++ b/public/views/dashboard-partials/members.html
@@ -4,10 +4,12 @@
 		<div class="col-sm-12">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h2>Team members</h2>
+						<div class="col-sm-12">
+						    <h2>Team members</h2>
+						</div>
 
 						<div class="col-sm-12">
-							<div ng-hide="data.athlete.list.length < 1">
+							<div ng-hide="data.athlete.list.length > 1">
                                 This team does not have any athletes yet! Add one below to get started.
                             </div>
 
