--- a/public/views/fmsresults.html
+++ b/public/views/fmsresults.html
@@ -8,7 +8,7 @@
 
 </header>
 <div class="page page-dashboard" data-ng-controller="FMSFormController">
-	
+
 	<section>
 		<div class="row">
 			<div class="col-sm-12">
@@ -17,21 +17,21 @@
 						<div class="text-left col-sm-6">
 							<h3>
 								Athlete
-							</h3>							
-							<select ng-model="data.selected_athlete"
-									ng-selected="data.selected_athlete"
-									ng-options="athlete.first_name for athlete in data.athletes track by athlete.id" >
-							</select>	
+							</h3>
+							<select ng-model="data.athlete.selected"
+									ng-selected="data.athlete.selected"
+									ng-options="athlete.first_name for athlete in data.athlete.list track by athlete.id" >
+							</select>
 						</div>
 						<div class="panel-body col-sm-8 ng-scope">
-						
+
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>	
-	
+	</section>
+
 	<div class="row">
 		<div class="col-sm-6">
 
@@ -43,11 +43,11 @@
 						<h3>
 							Athlete's FMS Score History
 						</h3>
-						
+
 					</div>
-					
+
 					<div ng-show="data.selected_athlete == null">Select an athlete under 'Dashboard' in the sidebar before viewing historical FMS data</div>
-					
+
 					<div ng-hide="data.selected_athlete == null" class="panel-body ng-scope">
 						<table class="table">
 							<thead>
@@ -69,8 +69,8 @@
 									</td>
 									<td>1</td>
 									<td><!--<span class="label label-warning">Missing</span>--></td>
-									
-	
+
+
 								</tr>
 
 							</tbody>
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="col-sm-6">
 
 			<div class="panel panel-default">
@@ -90,18 +90,18 @@
 					<div class="text-left col-sm-6">
 						<h3>
 							FMS Details
-						</h3>						
+						</h3>
 					</div>
 
 					<div class="panel-body ng-scope" ng-show="data.selected_fms_form == null">
 						select an FMS form on the left to view details
 					</div>
-					
+
 					<label ng-hide="data.selected_fms_form == null" class="switch switch-info pull-right"><input type="checkbox" ng-model="data.show_fms_edit" class="ng-untouched ng-valid ng-dirty ng-valid-parse" ><i></i></label>
-					
+
 					<div class="panel-body ng-scope" ng-show="data.selected_fms_form != null">
-					
-						</br></br></br>			
+
+						</br></br></br>
 						<form class="form-horizontal ng-pristine ng-valid">
 							<fieldset ng-disabled="!data.show_fms_edit">
 								<div class="form-group">
@@ -110,135 +110,135 @@
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.deepsquat"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.deepsquat"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.deepsquat"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.deepsquat"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.deepsquat"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.deepsquatcomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Hurdle step L</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Lhurdle"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Lhurdle"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Lhurdle"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lhurdle"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lhurdle"><span>3</span></label>
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Hurdle step R</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Rhurdle"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Rhurdle"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Rhurdle"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rhurdle"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rhurdle"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.hurdlecomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Inline lunge step L</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Llunge"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Llunge"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Llunge"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Llunge"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Llunge"><span>3</span></label>
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Inline lunge step R</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Rlunge"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Rlunge"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Rlunge"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rlunge"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rlunge"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.lungecomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Shoulder Mobility L</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Lshoulder"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Lshoulder"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Lshoulder"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lshoulder"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lshoulder"><span>3</span></label>
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Shoulder Mobility R</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Rshoulder"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Rshoulder"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Rshoulder"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rshoulder"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rshoulder"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.shouldercomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Impingement clearing test L</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Limpingement"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Limpingement"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Limpingement"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Limpingement"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Limpingement"><span>3</span></label>
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Impingement clearing test R</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Rimpingement"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Rimpingement"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Rimpingement"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rimpingement"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rimpingement"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.impingementcomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Active straight-leg raise L</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Lactive"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Lactive"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Lactive"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lactive"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lactive"><span>3</span></label>
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Active straight-leg raise R</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Ractive"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Ractive"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Ractive"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Ractive"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Ractive"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.activecomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Trunk stability pushup</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.trunk"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.trunk"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.trunk"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.trunk"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.trunk"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.trunkcomments">
@@ -251,43 +251,43 @@
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.press"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.press"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.press"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.press"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.press"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.presscomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Rotary stability L</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Lrotary"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Lrotary"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Lrotary"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lrotary"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Lrotary"><span>3</span></label>
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Rotary stability R</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.Rrotary"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.Rrotary"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.Rrotary"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rrotary"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.Rrotary"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.rotarycomments">
 									</div>
 								</div>
-								
+
 								<div class="form-group">
 									<label for="" class="col-sm-2">Posterior rocking clearing test</label>
 									<div class="col-sm-6">
 										<label class="ui-radio"><input type="radio" value="0" ng-model="data.selected_fms_form.posterior"><span>0</span></label>
 										<label class="ui-radio"><input type="radio" value="1" ng-model="data.selected_fms_form.posterior"><span>1</span></label>
 										<label class="ui-radio"><input type="radio" value="2" ng-model="data.selected_fms_form.posterior"><span>2</span></label>
-										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.posterior"><span>3</span></label>												
+										<label class="ui-radio"><input type="radio" value="3" ng-model="data.selected_fms_form.posterior"><span>3</span></label>
 									</div>
 									<div class="col-sm-4">
 											<input type="text" class="form-control" ng-model="data.selected_fms_form.posteriorcomments">
@@ -300,22 +300,22 @@
 						<div ng-hide="!data.show_fms_edit">
 							<button type="button" class="btn btn-info btn-sm" ng-click="updateFMS();">Update this FMS Form</button>
 						</div>
-						
+
 
 					</div>
 				</div>
 			</div>
 		</div>
-		
-	</div>
-	
 
-	
-	
-	
-	
-	
-	
-	
-	
+	</div>
+
+
+
+
+
+
+
+
+
+
 </div>
