--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -5,10 +5,7 @@
     </div>
 </div>
 <div id="nav-wrapper">
-    <ul id="nav"
-        data-slim-scroll
-        data-collapse-nav
-        data-highlight-active>
+    <ul id="nav" data-slim-scroll data-collapse-nav data-highlight-active>
         <li>
             <a href="#/dashboard"><span>dashboard</span></a>
         </li>
