--- a/angular-app/styles/main.css
+++ b/angular-app/styles/main.css
@@ -54,7 +54,7 @@ html {
 
 body {
   font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.42857;
   color: #767676;
   background-color: #f3f3f3;
@@ -4692,57 +4692,8 @@ fieldset[disabled] .btn-danger.active {
   -o-border-radius: 5px;
   border-radius: 5px; }
 
-.top-header .top-nav .nav-left > li > select {
-  margin: 5px 8px;
-  padding: 5px;
-  height: 40px;
-  font-size: 0.9em;
-  text-align: center;
-  color: #000;
-  background-color: #ddd;
-  border: none;
-  cursor: pointer;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none; }
-
-.top-header .top-nav .nav-left > li > select:hover {
-  background-color: #ccc; }
-
-.top-header .top-nav .nav-left > li.athlete-dropdown > select {
-  margin-right: 0;
-  -webkit-border-top-right-radius: 0;
-  -moz-border-top-right-radius: 0;
-  border-top-right-radius: 0;
-  -webkit-border-bottom-right-radius: 0;
-  -moz-border-bottom-right-radius: 0;
-  border-bottom-right-radius: 0; }
-
-.top-header .top-nav .nav-left > li.athlete-dropdown > a {
-  display: inline-block;
-  margin: 5px 8px 5px -5px;
-  padding: 0 20px;
-  height: 40px;
-  line-height: 40px;
-  font-size: 0.9em;
-  color: #fff;
-  background-color: #777;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-border-top-left-radius: 0;
-  -moz-border-top-left-radius: 0;
-  border-top-left-radius: 0;
-  -webkit-border-bottom-left-radius: 0;
-  -moz-border-bottom-left-radius: 0;
-  border-bottom-left-radius: 0; }
+.top-header .top-nav .nav-left > li > .btn-group {
+  margin: 8px; }
 
 .top-header .langs .active-flag .flag {
   margin-top: -5px; }
