--- a/public/views/dashboard-partials/teams.html
+++ b/public/views/dashboard-partials/teams.html
@@ -1,3 +1,4 @@
+
 <section>
 	<div class="row">
 		<div class="col-sm-12">
@@ -49,7 +50,11 @@
 					<div class="col-sm-10">
 						<form ng-submit="submitNewTeamForm()" ng-controller="SportsController">
 							<div class="form-group">
-								<input type="text" class="form-control" ng-model="data.new_team_form_data.name" placeholder="Enter new team name"/>
+								<input
+                                    type="text"
+                                    class="form-control"
+                                    ng-model="data.new_team_form_data.name"
+                                    placeholder="Enter new team name">
 							</div>
 							<div class="form-group">
 								<select
