Refactored + Updated controllers

--- a/public/views/header.html
+++ b/public/views/header.html
@@ -48,7 +48,7 @@
                     <button
                         type="button"
                         class="btn btn-primary"
-                        ng-click="Rover.browse.team(data.team.selected)">
+                        ng-click="Rover.browse.group(data.team.selected)">
 
                         View {{ data.team.selected.name }}'s page
                     </button>
